# admin-and-dev

./: .gitignore  README  admin-and-dev.cabal  admin-and-dev.cabal.backup
src/: .Main.hs.swp  API.hs  Acid.hs  Api.hs  App.hs  Auth.hs  Authentication.hs  Database.hs  Framework.hs  HasAcidState.hs  Main.hs  Message.hs  OldAuth.hs  Pages.hs  Room.hs  Routes.hs  Service.hs  Single.hs  Sitemap.hs  State.hs  Views.hs  WebRoutesBoomerang.hs
src/Client/Html/: Lobby.hs  Matchmaker.hs  Room.hs
src/Client/Scripts/: api.js  room.js
src/Common/: Classes.hs
src/Common/Auth/: Types.hs
src/Common/Location/: Types.hs  View.hs
src/Common/Profile/: Types.hs
src/Core/: Auth.hs  Room.hs  Types.hs
src/Core/Auth/: Acid.hs  Api.hs  Auth.hs  Html.hs
src/Core/Game/: Acid.hs  Game.hs  Handler.hs
src/Core/GameHolder/: Acid.hs  Game.hs  Handler.hs  Lobby.hs  Matchmaker.hs
src/Core/Lobby/: Acid.hs  Handler.hs
src/Core/Location/: Acid.hs  Api.hs  Location.hs
src/Core/Matchmaker/: Acid.hs  Api.hs  Json.hs  Matchmaker.hs
src/Core/Profile/: Acid.hs  Api.hs
src/Core/Room/: Acid.hs  Api.hs  Html.hs  Room.hs
src/DB/: Acid.hs  Config.hs  Remote.hs  Server.hs  SimpleDB.hs
src/DB/Auth/: AuthAction.hs
src/DB/Location/: LocationAction.hs
src/DB/Profile/: Acid.hs
src/Example/: Acid.hs  App.hs  Main.hs  Service.hs  SimpleFrontend.hs
src/Example/Frontend/: SimpleFontend.hs
src/Example/Site/: Handlers.hs  (+2 more)
src/Framework/: Acid.hs  Api.hs  Auth.hs  Error.hs  Location.hs  Profile.hs  View.hs
src/Plugins/: Auth.hs  Room.hs
src/Site/: Handlers.hs  Routes.hs  Sitemap.hs
src/Util/: GetBody.hs  HasAcidState.hs
(+160 files in other folders)
