name:                admin-and-dev

version:             0.1.0.0

synopsis:            A framework for serving multiplayer turn-based games in Haskell.

homepage:            github.com/ojw/admin-and-dev

license:             BSD3

license-file:        LICENSE

author:              James Orr

maintainer:          orrjamesw@gmail.com

category:            Game

build-type:          Simple

cabal-version:       >=1.8


library
  exposed-modules:     Framework, Framework.Profile, Framework.Error, Framework.View, Framework.Api, Framework.Location, Framework.Auth, Framework.Location.Api, Framework.Location.Classes, Framework.Location.Instances.Location, Framework.Location.Instances.View.MatchmakerView, Framework.Location.Instances.View.LocationView, Framework.Location.Instances.View.GameView, Framework.Location.Instances.View.LobbyView, Framework.Auth.Api, DB.Server, DB.Acid, DB.Location.LocationAction, DB.Auth.AuthAction, DB.Profile.Acid, Util.HasAcidState, Util.GetBody, Common.Classes, Common.Location.Types, Common.Location.View, Common.Location.Instances.IndexedContainer, Common.Location.Instances.Create, Common.Auth.Types, Common.Profile.Types, Example.SimpleFrontend
  
  build-depends:       base ==4.5.*, mtl ==2.1.*, lens ==3.8.*, text ==0.11.*, acid-state ==0.6.*, bytestring ==0.10.*, safecopy ==0.8.*, ixset ==1.0.*, network ==2.3.*, filepath ==1.3.*, entropy ==0.2.*, bcrypt ==0.0.*, lifted-base ==0.1.*, monad-control ==0.3.*, transformers ==0.3.*, parsec ==3.1.*
  
  hs-source-dirs:      src
  
